[metadata]
name = dmponline
version = 0.0.1
author = Kees den Heijer
author_email = c.denheijer@tudelft.nl
description = Python interface to DMPonline API
long_description = file: README.md
long_description_content_type = text/markdown
classifier =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.6
install_requires =
    pandas >= 1.5
    requests >= 2.28.1

[options.entry_points]
console_scripts =
    question_overview = question_overview:main
